# Yeditepe-CSE-211-SpringTermProject

./: .clang-format  .gitignore  Doxyfile  Makefile  README.md
data/: edge_case_empty.json  edge_case_single.json  input_default.json  input_demo.json  input_large.json  input_sample.json  test_frequency_ranking.json
docs/: SpellChecker_Presentation.pptx  USER_MANUAL.md  design_document.md  presentation.pptx
docs/uml/: class_diagram.puml  sequence_diagram.puml
frontend/: Tui.hpp  tui.cpp
frontend/gui/: CMakeLists.txt  SpellCheckerWidget.cpp  SpellCheckerWidget.hpp  main.cpp  spellchecker.cpp  spellchecker.h
include/core/: EditDistance.hpp  SpellChecker.hpp  SuggestionBuffer.hpp  Types.hpp
include/data_structures/: LinkedList.hpp  Trie.hpp
include/utils/: Parser.hpp
src/: main.cpp
src/core/: EditDistance.cpp  SpellChecker.cpp  SuggestionBuffer.cpp
src/data_structures/: Trie.cpp
src/utils/: Parser.cpp
tests/: test_main.cpp
tests/edge_cases/: test_empty.cpp  test_limits.cpp  test_single.cpp
tests/fixtures/: test_helpers.cpp  test_helpers.hpp
tests/integration/: test_io.cpp  test_workflow.cpp
tests/performance/: test_memory.cpp  test_stress.cpp
tests/unit/: test_editdistance.cpp  test_linkedlist.cpp  test_trie.cpp
